# custom_controller

./: README.md
custom_msgs/: CMakeLists.txt  README.md  package.xml
custom_msgs/msg/: ProgressStatus.msg
custom_pure_pursuit_controller/: CMakeLists.txt  README.md  custom_pure_pursuit_controller.xml  package.xml  plugins.xml
custom_pure_pursuit_controller/include/custom_pure_pursuit_controller/: pure_pursuit_controller.hpp
custom_pure_pursuit_controller/include/custom_pure_pursuit_controller/plugins/: progress_checker.hpp
custom_pure_pursuit_controller/plugins/: progress_checker.cpp
custom_pure_pursuit_controller/src/: pure_pursuit_controller.cpp
custom_pure_pursuit_controller/test/: CMakeLists.txt  test_pure_pursuit_controller.cpp
custom_regulated_pure_pursuit_controller/: CMakeLists.txt  custom_regulated_pure_pursuit_controller.xml  package.xml
custom_regulated_pure_pursuit_controller/include/custom_regulated_pure_pursuit_controller/: regulated_pure_pursuit_controller.hpp
custom_regulated_pure_pursuit_controller/src/: regulated_pure_pursuit_controller.cpp
turtlebot_bringup/: CMakeLists.txt  README.md  package.xml
turtlebot_bringup/behavior_trees/: simple_navigate_to_pose.xml
turtlebot_bringup/launch/: localization.launch.py  navigation.launch.py  rviz.launch.py  simulation_bringup.launch.py
turtlebot_bringup/params/: custom_controller_params.yaml  default_nav2_params.yaml
turtlebot_bringup/urdf/: turtlebot3_burger.urdf
turtlebot_bringup/worlds/: turtlebot3_world_and_burger.model
