<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot_bringup</name>
  <version>1.1.0</version>
  <description>Launch files to bringup turtlebot</description>
  <maintainer email="sarazin.anaelle@gmail.com">Anaëlle Sarazin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>launch_ros</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
